--- a/config/run-to-goal-evoant-v0.yaml
+++ b/config/run-to-goal-evoant-v0.yaml
@@ -65,7 +65,7 @@ seed: 42
 save_model_interval: 1
 
 robot_param_scale: 1
-skel_transform_nsteps: 1
+skel_transform_nsteps: 3
 
 done_condition:
   max_ang: 60
@@ -77,9 +77,9 @@ obs_specs:
   clip_qvel: true
   use_projected_params: true
   use_body_ind: true
-max_body_depth: 4
+max_body_depth: 3
 
-enable_remove: false
+enable_remove: true
 
 add_body_condition:
   max_nchild: 2
@@ -91,10 +91,10 @@ robot:
   body_params:
     offset:
       type: 'xy'
-      # lb: [-0.5, -0.5]
-      # ub: [0.5, 0.5]
-      lb: [-0.4, -0.4]
-      ub: [0.4, 0.4]
+      lb: [-0.5, -0.5]
+      ub: [0.5, 0.5]
+      # lb: [-0.4, -0.4]
+      # ub: [0.4, 0.4]
 
   joint_params: {}
 
