sgnn_lrf_v3_noquat

--- a/config/run-to-goal-evoant-v0.yaml
+++ b/config/run-to-goal-evoant-v0.yaml
@@ -73,7 +73,7 @@ done_condition:
 
 obs_specs:
   attr: ['depth']
-  sim: []
+  sim: ['noquat']
   design: true
   clip_qvel: true
   use_projected_params: true
