--- a/config/run-to-goal-evoant-v0.yaml
+++ b/config/run-to-goal-evoant-v0.yaml
@@ -38,7 +38,7 @@ evo_policy_specs:
   attr_log_std: -2.3
   fix_control_std: false
   fix_attr_std: false
-  # egnn: True
+  egnn: True
 policy_optimizer: 'Adam'
 policy_lr: 5.e-5
 policy_momentum: 0.0
@@ -53,12 +53,13 @@ evo_value_specs:
     hdims: [64, 64, 64]
     aggr: add
     bias: true
+  egnn: True
 value_optimizer: 'Adam'
 value_lr: 3.e-4
 value_momentum: 0.0
 value_weightdecay: 0.0
 clip_epsilon: 0.2
-min_batch_size: 50000
+min_batch_size: 5000
 mini_batch_size: 2048
 num_optim_epoch: 10
 max_epoch_num: 1000
@@ -73,8 +74,8 @@ done_condition:
 
 obs_specs:
   attr: ['depth']
-  sim: []
-  # sim: ['noquat']
+  # sim: []
+  sim: ['noquat']
   design: true
   clip_qvel: true
   use_projected_params: true
