--- a/config/turn-to-goal-evoant-v3.yaml
+++ b/config/turn-to-goal-evoant-v3.yaml
@@ -23,9 +23,9 @@ evo_policy_specs:
     hdims: [64, 64, 64]
     aggr: add
     bias: true
-  control_index_mlp:
-    hdims: [128, 128]
-    rescale_linear: true
+  # control_index_mlp:
+  #   hdims: [128, 128]
+  #   rescale_linear: true
   attr_gnn_specs:
     layer_type: graph_conv
     hdims: [64, 64, 64]
