--- a/config/turn-to-goal-evoant-v3.yaml
+++ b/config/turn-to-goal-evoant-v3.yaml
@@ -15,9 +15,9 @@ evo_policy_specs:
     hdims: [64, 64, 64]
     aggr: add
     bias: true
-  skel_index_mlp:
-    hdims: [128, 128]
-    rescale_linear: true
+  # skel_index_mlp:
+  #   hdims: [128, 128]
+  #   rescale_linear: true
   control_gnn_specs:
     layer_type: graph_conv
     hdims: [64, 64, 64]
@@ -31,9 +31,9 @@ evo_policy_specs:
     hdims: [64, 64, 64]
     aggr: add
     bias: true
-  attr_index_mlp:
-    hdims: [128, 128]
-    rescale_linear: true
+  # attr_index_mlp:
+  #   hdims: [128, 128]
+  #   rescale_linear: true
   control_log_std: 0
   attr_log_std: -2.3
   fix_control_std: false
